--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -77,7 +77,7 @@
                 </Button>
 
                 <!-- Кнопка Дневник -->
-                <Button Height="40" Background="Transparent" Foreground="White" BorderThickness="0">
+                <Button Height="40" Background="Transparent" Foreground="White" BorderThickness="0" Click="DiaryButton_Click">
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                         <Image Source="Icons/payArend.png" Width="20" Height="20" Margin="9,0,0,0"/>
                         <TextBlock x:Name="txtDiary" Text="Дневник"
