--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Kurs_ArendOff.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Kurs_ArendOff"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Kurs_ArendOff">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
