--- a/Pages/DiaryPage.xaml
+++ b/Pages/DiaryPage.xaml
@@ -3,14 +3,29 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Kurs_ArendOff.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="DiaryPage">
+      Title="DiaryPage"
+      Loaded="Page_Loaded">
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-    <Grid>
-        <Border Background="White" CornerRadius="10" Margin="20"/>
-        <TextBlock Text="Страница Дневника (здесь будет таблица)" 
-                   FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBlock Text="Дневник договоров аренды"
+                   FontSize="24"
+                   FontWeight="Bold"
+                   Margin="0,0,0,15"/>
+
+        <DataGrid x:Name="ContractsDataGrid"
+                  Grid.Row="1"
+                  AutoGenerateColumns="True"  IsReadOnly="True"          HeadersVisibility="Column"
+                  GridLinesVisibility="Horizontal"
+                  HorizontalGridLinesBrush="#CCCCCC"
+                  RowBackground="White"
+                  AlternatingRowBackground="#F5F5F5"
+                  BorderBrush="#DDDDDD"
+                  BorderThickness="1"/>
+
     </Grid>
 </Page>
