--- a/Pages/DiaryPage.xaml
+++ b/Pages/DiaryPage.xaml
@@ -77,6 +77,16 @@
           
           VerticalAlignment="Stretch"
           HorizontalAlignment="Stretch">
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Закрепить / Открепить договор" 
+                      Click="PinContract_Click"
+                      x:Name="PinMenuItem"/>
+                    <Separator/>
+                    <MenuItem Header="Изменить договор"
+                              Click="EditContract_Click"/>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="№" Binding="{Binding ID}" Width="Auto" CanUserResize="False"
                                     FontFamily="Circe"/>
